--- a/public/cart.html
+++ b/public/cart.html
@@ -5,11 +5,14 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+   <script src="shop.js"></script>
+   <script src="cart.js"></script>
    <title>Document</title>
 </head>
 
 <body>
-   <h1>CHECKOUT HERE...........</h1>
+   <ul id="cart_items"></ul>
 </body>
 
 </html>
