--- a/public/shop.html
+++ b/public/shop.html
@@ -5,11 +5,19 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link rel="stylesheet" href="main.css">
+   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+   <script defer src="shop.js"></script>
    <title>Document</title>
 </head>
 
 <body>
-   <h1>SHOP HERE</h1>
+
+   <div id="products">
+
+   </div>
+
+
 </body>
 
 </html>
